moved back to tweety_pi.py

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "keywords": ["@acolabfr", "@FoireClermont", "#InventeUneInsultePolie"],
-  "speed": 3
+  "keywords": ["@acolabfr", "@FoireClermont"],
+  "delay": 15
 }
