Start tweety pi after time has been synchronized

--- a/tweety_pi_button.service
+++ b/tweety_pi_button.service
@@ -1,6 +1,11 @@
 [Unit]
 Description=Tweety Pi Button
+
+# https://raspberrypi.stackexchange.com/questions/94635/how-can-i-delay-the-startup-of-systemd-services-until-the-datetime-is-set-no-rt
+After=time-sync.target
+
 After=network-online.target
+Requires=network-online.target
  
 [Service]
 Type=simple
